--- a/app/views/photo/index.html.erb
+++ b/app/views/photo/index.html.erb
@@ -14,7 +14,7 @@
                 <input type="submit" value="Upload">
             </div>
         </form>
-        <div class="images">
+        <div class="images" style="margin-bottom:50px;">
             <div class="post">
                 <div>
                     <img class="post-image" src="https://pbs.twimg.com/media/DOXI0IEXkAAkokm.jpg">
